--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -1,20 +1,19 @@
 process PROD = {
   source = PoolSource {
     untracked int32 maxEvents = 10
-    untracked vstring fileNames = { "file:/afs/cern.ch/cms/Releases/CMSSW/CMSSW_0_8_0_pre1/src/Configuration/Applications/data/reco-application-tracking-finaltrackfits-ctffinalfitanalytical.root" }
+    untracked vstring fileNames = { "file:/afs/cern.ch/cms/Releases/CMSSW/CMSSW_0_7_2/src/Configuration/Applications/data/reco-application-tracking-finaltrackfits-ctffinalfitanalytical.root" }
   }
 
   module bestTracks = TrackSelector {
     string src = "CTFAnalytical"
+    string alias = "best"
   }
 
   module out = PoolOutputModule {
     untracked string fileName = "tracks.root"
     untracked vstring outputCommands = {
       "drop *",
-      "keep TrackingRecHitsOwned_*_*_*",
-      "keep recoTrackExtras_*_*_*",
-      "keep recoTracks_*_*_*",
+      "keep *_bestTracks_*_*"
     }
   }
 
