--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -1,10 +1,10 @@
 process PROD = {
   source = PoolSource {
     untracked int32 maxEvents = 10
-    untracked vstring fileNames = { "file:/afs/cern.ch/cms/Releases/CMSSW/CMSSW_0_7_2/src/Configuration/Applications/data/reco-application-tracking-finaltrackfits-ctffinalfitanalytical.root" }
+    untracked vstring fileNames = { "file:reco.root" }
   }
 
-  module bestTracks = TrackSelector {
+  module bestTracks = TrackSelectorBase {
     string src = "CTFAnalytical"
     string alias = "best"
   }
