--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -1,4 +1,9 @@
 process PROD = {
+
+  untracked PSet options = {
+    untracked bool makeTriggerResults = true
+  }
+
   source = PoolSource {
     untracked int32 maxEvents = 10
     untracked vstring fileNames = { "file:reco.root" }
@@ -7,6 +12,7 @@ process PROD = {
   module bestTracks = TrackSelectorBase {
     string src = "CTFAnalytical"
     string alias = "best"
+    bool filter = true
   }
 
   module out = PoolOutputModule {
@@ -15,12 +21,15 @@ process PROD = {
       "drop *",
       "keep *_bestTracks_*_*"
     }
+    untracked PSet SelectEvents = {	
+      vstring SelectEvents = { "selectTracks" }
+    }  
   }
 
-  module evtInfo = AsciiOutputModule {
+  module evtInfo = AsciiOutputModule {	
   }
 
-  path p = {
+  path selectTracks = {
     bestTracks
   }
 
