--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -9,7 +9,7 @@ process PROD = {
     untracked vstring fileNames = { "file:reco.root" }
   }
 
-  module bestTracks = TrackSelectorBase {
+  module bestTracks = SingleTrackSelectorBase {
     string src = "CTFAnalytical"
     string alias = "best"
     bool filter = true
