implemented selection of highest pt tracks and generic track selection

--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -9,31 +9,53 @@ process PROD = {
     untracked vstring fileNames = { "file:reco.root" }
   }
 
-  module bestTracks = SingleTrackSelectorBase {
+  module allTracks = SingleTrackSelectorBase {
     string src = "CTFAnalytical"
-    string alias = "best"
+    string alias = "all"
     bool filter = true
   }
 
-  module out = PoolOutputModule {
-    untracked string fileName = "tracks.root"
+  module highPtTracks = LargestPtTrackSelector {
+    string src = "CTFAnalytical"	
+    string alias = "highPt"
+    uint32 max = 2
+    bool filter = true
+  }
+
+  module outAll = PoolOutputModule {
+    untracked string fileName = "allTracks.root"
     untracked vstring outputCommands = {
       "drop *",
-      "keep *_bestTracks_*_*"
+      "keep *_allTracks_*_*"
     }
     untracked PSet SelectEvents = {	
-      vstring SelectEvents = { "selectTracks" }
+      vstring SelectEvents = { "selectAllTracks" }
+    }  
+  }
+
+  module outHighPt = PoolOutputModule {
+    untracked string fileName = "highPtTracks.root"
+    untracked vstring outputCommands = {
+      "drop *",
+      "keep *_highPtTracks_*_*"
+    }
+    untracked PSet SelectEvents = {	
+      vstring SelectEvents = { "selectHighPtTracks" }
     }  
   }
 
   module evtInfo = AsciiOutputModule {	
   }
 
-  path selectTracks = {
-    bestTracks
+  path selectAllTracks = {
+    allTracks
+  }
+
+  path selectHighPtTracks = {
+    highPtTracks
   }
 
   endpath ep = {
-    evtInfo, out
+    evtInfo, outAll, outHighPt
   }
 }
