inheritance changed to template

--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -9,7 +9,7 @@ process PROD = {
     untracked vstring fileNames = { "file:reco.root" }
   }
 
-  module allTracks = SingleTrackSelectorBase {
+  module allTracks = AnyTrackSelector {
     string src = "CTFAnalytical"
     string alias = "all"
     bool filter = true
