added mass window selector

--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -22,6 +22,14 @@ process PROD = {
     bool filter = true
   }
 
+  module ZTracks = MassWindowTrackSelector {
+    string src = "CTFAnalytical"	
+    string alias = "Z"
+    double min = 86
+    double max = 97
+    bool filter = true
+  }
+
   module outAll = PoolOutputModule {
     untracked string fileName = "allTracks.root"
     untracked vstring outputCommands = {
@@ -44,6 +52,17 @@ process PROD = {
     }  
   }
 
+  module outZ = PoolOutputModule {
+    untracked string fileName = "ZTracks.root"
+    untracked vstring outputCommands = {
+      "drop *",
+      "keep *_ZTracks_*_*"
+    }
+    untracked PSet SelectEvents = {	
+      vstring SelectEvents = { "selectZTracks" }
+    }  
+  }
+
   module evtInfo = AsciiOutputModule {	
   }
 
@@ -55,7 +74,11 @@ process PROD = {
     highPtTracks
   }
 
+  path selectZTracks = {
+    ZTracks
+  }
+
   endpath ep = {
-    evtInfo, outAll, outHighPt
+    evtInfo, outAll, outHighPt, outZ
   }
 }
