object selector is now fully generic

--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -9,9 +9,10 @@ process PROD = {
     untracked vstring fileNames = { "file:reco.root" }
   }
 
-  module allTracks = AnyTrackSelector {
+  module goodTracks = PtMinTrackSelector {
     string src = "CTFAnalytical"
-    string alias = "all"
+    string alias = "good"
+    double ptMin = 5.0
     bool filter = true
   }
 
@@ -30,14 +31,14 @@ process PROD = {
     bool filter = true
   }
 
-  module outAll = PoolOutputModule {
-    untracked string fileName = "allTracks.root"
+  module outGood = PoolOutputModule {
+    untracked string fileName = "goodTracks.root"
     untracked vstring outputCommands = {
       "drop *",
-      "keep *_allTracks_*_*"
+      "keep *_goodTracks_*_*"
     }
     untracked PSet SelectEvents = {	
-      vstring SelectEvents = { "selectAllTracks" }
+      vstring SelectEvents = { "selectGoodTracks" }
     }  
   }
 
@@ -66,8 +67,8 @@ process PROD = {
   module evtInfo = AsciiOutputModule {	
   }
 
-  path selectAllTracks = {
-    allTracks
+  path selectGoodTracks = {
+    goodTracks
   }
 
   path selectHighPtTracks = {
@@ -79,6 +80,6 @@ process PROD = {
   }
 
   endpath ep = {
-    evtInfo, outAll, outHighPt, outZ
+    evtInfo, outGood, outHighPt, outZ
   }
 }
