--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -10,21 +10,21 @@ process PROD = {
   }
 
   module goodTracks = PtMinTrackSelector {
-    string src = "CTFAnalytical"
+    InputTag src = CTFAnalytical
     string alias = "good"
     double ptMin = 5.0
     bool filter = true
   }
 
   module highPtTracks = LargestPtTrackSelector {
-    string src = "CTFAnalytical"	
+    InputTag src = CTFAnalytical
     string alias = "highPt"
     uint32 max = 2
     bool filter = true
   }
 
   module ZTracks = MassWindowTrackSelector {
-    string src = "CTFAnalytical"	
+    InputTag src = CTFAnalytical
     string alias = "Z"
     double min = 86
     double max = 97
