updated example cfg

--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -11,7 +11,7 @@ process PROD = {
 
   module goodTracks = PtMinTrackSelector {
     InputTag src = CTFAnalytical
-    double ptMin = 5.0
+    double ptMin = 15.0
     bool filter = true
   }
 
@@ -25,6 +25,12 @@ process PROD = {
     InputTag src = CTFAnalytical
     double min = 86
     double max = 97
+    bool filter = true
+  }
+
+  module configTracks = ConfigTrackSelector {
+    InputTag src = CTFAnalytical
+    string cut = "pt > 15.0"
     bool filter = true
   }
 
@@ -61,6 +67,17 @@ process PROD = {
     }  
   }
 
+  module outConfig = PoolOutputModule {
+    untracked string fileName = "configTracks.root"
+    untracked vstring outputCommands = {
+      "drop *",
+      "keep *_configTracks_*_*"
+    }
+    untracked PSet SelectEvents = {	
+      vstring SelectEvents = { "selectConfigTracks" }
+    }  
+  }
+
   module evtInfo = AsciiOutputModule {	
   }
 
@@ -76,7 +93,11 @@ process PROD = {
     ZTracks
   }
 
+  path selectConfigTracks = {
+    configTracks
+  }
+
   endpath ep = {
-    evtInfo, outGood, outHighPt, outZ
+    evtInfo, outGood, outHighPt, outZ, outConfig
   }
 }
