--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -10,26 +10,26 @@ process PROD = {
   }
 
   module goodTracks = PtMinTrackSelector {
-    InputTag src = CTFAnalytical
+    InputTag src = ctfAnalyticalTracks
     double ptMin = 15.0
     bool filter = true
   }
 
   module highPtTracks = LargestPtTrackSelector {
-    InputTag src = CTFAnalytical
+    InputTag src = ctfAnalyticalTracks
     uint32 max = 2
     bool filter = true
   }
 
   module ZTracks = MassWindowTrackSelector {
-    InputTag src = CTFAnalytical
+    InputTag src = ctfAnalyticalTracks
     double min = 86
     double max = 97
     bool filter = true
   }
 
   module configTracks = ConfigTrackSelector {
-    InputTag src = CTFAnalytical
+    InputTag src = ctfAnalyticalTracks
     string cut = "pt > 15.0"
     bool filter = true
   }
