improved parameter names to avoid possible clashes

--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -17,14 +17,14 @@ process PROD = {
 
   module highPtTracks = LargestPtTrackSelector {
     InputTag src = ctfAnalyticalTracks
-    uint32 max = 2
+    uint32 maxNumber = 2
     bool filter = true
   }
 
   module ZTracks = MassWindowTrackSelector {
     InputTag src = ctfAnalyticalTracks
-    double min = 86
-    double max = 97
+    double minRange = 86
+    double maxRange = 97
     bool filter = true
   }
 
