updated test script

--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -1,4 +1,4 @@
-process PROD = {
+process TrackSelection = {
 
   untracked PSet options = {
     untracked bool makeTriggerResults = true
@@ -10,26 +10,26 @@ process PROD = {
   }
 
   module goodTracks = PtMinTrackSelector {
-    InputTag src = ctfAnalyticalTracks
+    InputTag src = ctfWithMaterialTracks
     double ptMin = 15.0
     bool filter = true
   }
 
   module highPtTracks = LargestPtTrackSelector {
-    InputTag src = ctfAnalyticalTracks
+    InputTag src = ctfWithMaterialTracks
     uint32 maxNumber = 2
     bool filter = true
   }
 
   module ZTracks = MassWindowTrackSelector {
-    InputTag src = ctfAnalyticalTracks
+    InputTag src = ctfWithMaterialTracks
     double minRange = 86
     double maxRange = 97
     bool filter = true
   }
 
   module configTracks = ConfigTrackSelector {
-    InputTag src = ctfAnalyticalTracks
+    InputTag src = ctfWithMaterialTracks
     string cut = "pt > 15.0"
     bool filter = true
   }
