redesigned parameter names mechanism

--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -1,4 +1,4 @@
-process TrackSelection = {
+process TrackSelectorTest = {
 
   untracked PSet options = {
     untracked bool makeTriggerResults = true
@@ -23,8 +23,8 @@ process TrackSelection = {
 
   module ZTracks = MassWindowTrackSelector {
     InputTag src = ctfWithMaterialTracks
-    double minRange = 86
-    double maxRange = 97
+    double massMin = 86
+    double massMax = 97
     bool filter = true
   }
 
