This commit was manufactured by cvs2git to create tag 'PhysicsTools- RecoAlgos-CMSSW_1_1_1'.
Sprout from master 2006-10-03 11:36:10 UTC Luca Lista <sha1-73801ca8ca16918e053d407e1ed9c2469728f170@cern.ch> 'redesigned parameter names mechanism'
Cherrypick from master 2006-09-28 08:30:48 UTC Luca Lista <sha1-73801ca8ca16918e053d407e1ed9c2469728f170@cern.ch> 'added largest et calo jet selector':
    src/SealModule.cc
    test/testTrackSelector.cfg
Cherrypick from master 2006-10-20 13:41:52 UTC Luca Lista <sha1-73801ca8ca16918e053d407e1ed9c2469728f170@cern.ch> 'added CaloJet merger':
    src/ObjectUtilities.h

--- a/test/testTrackSelector.cfg
+++ b/test/testTrackSelector.cfg
@@ -1,4 +1,4 @@
-process TrackSelectorTest = {
+process PROD = {
 
   untracked PSet options = {
     untracked bool makeTriggerResults = true
@@ -10,26 +10,26 @@ process TrackSelectorTest = {
   }
 
   module goodTracks = PtMinTrackSelector {
-    InputTag src = ctfWithMaterialTracks
+    InputTag src = ctfAnalyticalTracks
     double ptMin = 15.0
     bool filter = true
   }
 
   module highPtTracks = LargestPtTrackSelector {
-    InputTag src = ctfWithMaterialTracks
+    InputTag src = ctfAnalyticalTracks
     uint32 maxNumber = 2
     bool filter = true
   }
 
   module ZTracks = MassWindowTrackSelector {
-    InputTag src = ctfWithMaterialTracks
-    double massMin = 86
-    double massMax = 97
+    InputTag src = ctfAnalyticalTracks
+    double minRange = 86
+    double maxRange = 97
     bool filter = true
   }
 
   module configTracks = ConfigTrackSelector {
-    InputTag src = ctfWithMaterialTracks
+    InputTag src = ctfAnalyticalTracks
     string cut = "pt > 15.0"
     bool filter = true
   }
