set optional parameter

--- a/test/testBToKSMuMu.cfg
+++ b/test/testBToKSMuMu.cfg
@@ -12,42 +12,37 @@ source = PoolSource {
 
 untracked PSet maxEvents = {untracked int32 input = -1}
 
-module muCands = ChargedCandidateProducer {
+module muCands = ConcreteChargedCandidateProducer {
   InputTag src = ctfWithMaterialTracks
   string particleType = "mu+"
 }
 
-module goodmuons =  EtaPtMinCandSelector {
+module goodMuons =  CandViewRefSelector {
   InputTag src = muCands
-  double ptMin = 3.0
-  double etaMin = -2.6
-  double etaMax = 2.6
+  string cut = "pt > 3 & abs(eta) < 2.6"
 }
 
-module piCands = ChargedCandidateProducer {
+module piCands = ConcreteChargedCandidateProducer {
   InputTag src = ctfWithMaterialTracks
   string particleType = "pi+"
 }
 
-module goodpions =  EtaPtMinCandSelector {
+module goodPions =  CandViewRefSelector {
   InputTag src = piCands
-  double ptMin = 0.0
-  double etaMin = -2.6
-  double etaMax = 2.6
+  string cut = "abs(eta) < 2.6"
 }
 
 module kShortsBare = CandViewShallowCloneCombiner {
-  string decay = "goodpions@+ goodpions@-"
+  string decay = "goodPions@+ goodPions@-"
   string cut = "0.3 < mass < 0.7"
 }
-
 module kShorts = KinematicVertexFitCompositeCandProducer {
   InputTag src = kShortsBare
   bool setLongLived = true
 }
 
 module BdBare = CandViewShallowCloneCombiner {
-  string decay = "kShorts goodmuons@+ goodmuons@-"
+  string decay = "kShorts goodMuons@+ goodMuons@-"
   string cut = "3.0 < mass < 7.0"
 }
 
@@ -67,7 +62,7 @@ module RECO = PoolOutputModule {
   }
 }
 
-  sequence dofit = { muCands, goodmuons, piCands, goodpions, kShortsBare, kShorts, BdBare, Bd }
+  sequence dofit = { muCands, goodMuons, piCands, goodPions, kShortsBare, kShorts, BdBare, Bd }
   path pall = { dofit }
   endpath outpath = { RECO }
 }
