updated test scripts

--- a/test/testBToKSMuMu.cfg
+++ b/test/testBToKSMuMu.cfg
@@ -35,6 +35,7 @@ module goodPions =  CandViewRefSelector {
 module kShortsBare = CandViewShallowCloneCombiner {
   string decay = "goodPions@+ goodPions@-"
   string cut = "0.3 < mass < 0.7"
+  bool setLongLived = true
 }
 module kShorts = KinematicVertexFitCompositeCandProducer {
   InputTag src = kShortsBare
@@ -48,21 +49,29 @@ module BdBare = CandViewShallowCloneCombiner {
 
 module Bd = KinematicVertexFitCompositeCandProducer {
   InputTag src = BdBare
-  bool setLongLived = false
 } 
 
+include "Configuration/EventContent/data/EventContent.cff"
 
-module RECO = PoolOutputModule {
-  untracked string fileName = '/tmp/llista/B0Ksmumu_reco_a_gmixed2_test_candidates.root'
-  untracked vstring outputCommands = {
-    "keep *",
-    "drop *_*_*_Simulation",
-    "drop PCaloHits_g4SimHits_*_*",
-    "drop *_hcalDigis_*_*"
+block BToKSMuMuEventContent = {
+  untracked vstring outputCommands = { }
+}
+
+block BToKSMuMuOutputCommands = {
+  untracked vstring outputCommands = { 
+    "keep *_*_*_TestBToKSMuMu"
   }
+}
+
+replace BToKSMuMuEventContent.outputCommands += AODEventContent.outputCommands
+replace BToKSMuMuEventContent.outputCommands += BToKSMuMuOutputCommands.outputCommands
+
+module out = PoolOutputModule {
+  untracked string fileName = '/tmp/llista/B0Ksmumu_cands.root'
+  using BToKSMuMuEventContent
 }
 
   sequence dofit = { muCands, goodMuons, piCands, goodPions, kShortsBare, kShorts, BdBare, Bd }
   path pall = { dofit }
-  endpath outpath = { RECO }
+  endpath outpath = { out }
 }
