added new Ks collection

--- a/test/testBToKSMuMu.cfg
+++ b/test/testBToKSMuMu.cfg
@@ -42,6 +42,11 @@ module kShorts = KinematicVertexFitCompositeCandProducer {
   bool setLongLived = true
 }
 
+module kShortsV = KalmanVertexFitCompositeCandProducer {
+  InputTag src = kShortsBare
+  bool setLongLived = true
+}
+
 module BdBare = CandViewShallowCloneCombiner {
   string decay = "kShorts goodMuons@+ goodMuons@-"
   string cut = "3.0 < mass < 7.0"
@@ -71,7 +76,8 @@ module out = PoolOutputModule {
   using BToKSMuMuEventContent
 }
 
-  sequence dofit = { muCands, goodMuons, piCands, goodPions, kShortsBare, kShorts, BdBare, Bd }
-  path pall = { dofit }
-  endpath outpath = { out }
+sequence dofit = { muCands, goodMuons, piCands, goodPions, kShortsBare, kShorts, kShortsV, BdBare, Bd }
+path pall = { dofit }
+endpath outpath = { out }
+
 }
