added new optional parameter setPdgId

--- a/test/testBToKSMuMu.cfg
+++ b/test/testBToKSMuMu.cfg
@@ -36,24 +36,29 @@ module kShortsBare = CandViewShallowCloneCombiner {
   string decay = "goodPions@+ goodPions@-"
   string cut = "0.3 < mass < 0.7"
   bool setLongLived = true
+  int32 setPdgId = 310
 }
 module kShorts = KinematicVertexFitCompositeCandProducer {
   InputTag src = kShortsBare
   bool setLongLived = true
+  int32 setPdgId = 310
 }
 
 module kShortsV = KalmanVertexFitCompositeCandProducer {
   InputTag src = kShortsBare
   bool setLongLived = true
+  int32 setPdgId = 310
 }
 
 module BdBare = CandViewShallowCloneCombiner {
   string decay = "kShorts goodMuons@+ goodMuons@-"
   string cut = "3.0 < mass < 7.0"
+  int32 setPdgId = 511
 }
 
 module Bd = KinematicVertexFitCompositeCandProducer {
   InputTag src = BdBare
+  int32 setPdgId = 511
 } 
 
 include "Configuration/EventContent/data/EventContent.cff"
